SONARGO-13 Go coverage does not support mono-repositories with coverage reports not at the project root (#606)
GitOrigin-RevId: 23b035b1174d91d6752a6e7d7fe2b6e54b46374d